--- a/hw2/app/src/main/AndroidManifest.xml
+++ b/hw2/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Hw1">
         <activity
+            android:name=".PreviewActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
